tests and readme

--- a/README
+++ b/README
@@ -1,19 +1,26 @@
-<?php
+# php-multi-process #
+PHP library for parallel shell commands execution
 
-require_once (__DIR__ . '/../vendor/autoload.php');
+### Installation via composer: ###
+Either run
 
-$cmd1 = ['echo', '"Hello World"'];
-$cmd2 = ['echo', '"Second Command'];
+```
+php composer.phar require rikanushu/php-multi-process "*"
+```
 
+or add
 
-$pool = new rikanishu\multiprocess\Pool([$cmd1, $cmd2]);
-$pool->setDebugEnabled(true);
-$pool->run();
+```
+"rikanushu/php-multi-process": "*"
+```
 
-foreach ($pool->getExecutedCommands() as $cmd) {
-    print_r($cmd->getExecutionResult());
-}
+to the ```require``` section of your ```composer.json``` file.
 
+### Usage: ###
+
+#### Parallel process execution: ###
+
+```php
 $cmd1 = ['echo', '"Some Command"'];
 $cmd2 = 'echo "Another Command"';
 $cmd3 = ['echo "$SOME_ENV_VAR" "$PWD"', [
@@ -22,6 +29,7 @@ $cmd3 = ['echo "$SOME_ENV_VAR" "$PWD"', [
         'SOME_ENV_VAR' => 'PWD is:'
     ],
 ]];
+
 $pool = new rikanishu\multiprocess\Pool([$cmd1, $cmd2, $cmd3]);
 $pool->run();
 
@@ -29,19 +37,27 @@ $pool->run();
 foreach ($pool->getCommands() as $command) {
     if ($command->isExecuted()) {
         $res = $command->getExecutionResult();
-        echo $res->getExitCode() . " | " . $res->getStdout() . " | " . $res->getStdout() . "\n";
+        echo $res->getExitCode() . " | " . $res->getStdout() . " | " . $res->getStderr() . "\n";
     }
 }
+
+/*  Output:
+    0 | Some Command |
+    0 | Another Command |
+    0 | PWD is: /tmp |
+*/
 
 /* Or you just can use getExecutedCommands method instead of checking */
 foreach ($pool->getExecutedCommands() as $command) {
     $res = $command->getExecutionResult();
-    echo $res->getExitCode() . " | " . $res->getStdout() . " | " . $res->getStdout() . "\n";
+    echo $res->getExitCode() . " | " . $res->getStdout() . " | " . $res->getStderr() . "\n";
 }
 
-/* If you not checked isExecuted and get the execution result for non-executed command, NonExecutedException will be raised */
+/* If you haven't checked isExecuted and get the execution result for non-executed command,
+   NonExecutedException will be raised */
 
 $commands = $pool->getCommands();
 $commands[0]->getExecutionResult()->getOutput(); // Some Command
 $commands[1]->getExecutionResult()->getOutput(); // Another Command
 $commands[2]->getExecutionResult()->getOutput(); // PWD is: /tmp
+```
